# thc-hydra

./: CHANGES  CHANGES.md  CITATION.cff  Dockerfile  README  README.md  hydra-logo.rc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
hydra-gtk/: INSTALL.md  README
hydra-gtk/src/: Makefile.am
